# fractus

./: .cspell.yaml  .gitignore  Cargo.toml  README.md  docker-compose.yaml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: config.rs  error.rs  formats.rs  main.rs  utils.rs
crates/cli/src/commands/: info.rs  mod.rs  recover.rs  split.rs
crates/server/: Cargo.toml
crates/shamir/: Cargo.toml  README.md
crates/shamir/src/: gf256.rs  lib.rs  poly.rs  share.rs
crates/sss-app/: Cargo.toml  Dioxus.toml  README.md
crates/sss-app/assets/: main.css
crates/sss-app/src/: main.rs
crates/sss-cli/: Cargo.toml
crates/sss-cli/src/: main.rs
crates/sss-server/: Cargo.toml
crates/sss-server/migrations/: 0001_role.sql  0002_user.sql  0003_user_roles.sql  0004_secret.sql  0005_share.sql
crates/sss-server/src/: lib.rs  main.rs  password.rs
crates/sss-server/src/http/: error.rs  mod.rs  user.rs
crates/sss-server/src/http/secret/: mod.rs  share.rs
crates/xsss/: Cargo.toml
crates/xsss/src/: main.rs
src/: main.rs
src/shamir/: gf256.rs  mod.rs  poly.rs  share.rs
