[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
shamir = { path = "crates/shamir" }
axum = "0.8.1"
tower = "0.5.2"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["full"] }
anyhow = { version = "1.0.0" }
thiserror = "2.0.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dotenvy = "0.15.7"

[workspace.lints.rust]
[workspace.lints.clippy]
