[package]
name = "fractus-cli"
description = "Command-line interface for Fractus - Shamir's Secret Sharing"
version.workspace = true
edition.workspace = true

[[bin]]
name = "fractus"
path = "src/main.rs"

[dependencies]
fractus-shamir = { workspace = true }
clap = { version = "4.5", features = ["derive", "color", "suggestions"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0" }
thiserror = "2.0"
hex = "0.4"
base64 = "0.21"
rand = "0.8"
rand_chacha = "0.3"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
rpassword = "7.3"
dirs = "5.0"
env_logger = "0.10"
log = "0.4"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[lints]
workspace = true
