[package]
name = "fractus-shamir"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = ["rand/std", "rand/std_rng"]

[dependencies]
crc32fast = "1.4"
hashbrown = "0.15"
rand = { version = "0.8", default-features = false }

[dev-dependencies]
rand_chacha = "0.3"
