[package]
name = "sss-cli"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.5.26", features = ["derive"] }
reqwest = { workspace = true }

[lints]
workspace = true
