[package]
name = "sss-server"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
shamir = { workspace = true }
axum = { workspace = true, features = ["macros"] }
tokio = { workspace = true }
tower = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "time",
    "uuid",
] }
argon2 = "0.5.3"
rand = "0.8.5"
uuid = { version = "1.11.1", features = ["serde"] }
validator = { version = "0.19.0", features = ["derive"] }
time = { version = "0.3.37" }
serde_with = { version = "3.12.0", features = ["time_0_3"] }
regex = "1.11.1"
once_cell = "1.20.2"
tower-http = { version = "0.6.2", features = ["cors"] }
hex = "0.4.3"

[lints]
workspace = true
